--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -52,6 +52,10 @@
     user-select: none;
 }
 
+.nav-panel__dropdown--top {
+    top: 40px;
+}
+
 @media screen and (max-width: 1481px) {
     .header {
         padding: 16px 24px;
